--- a/package.json
+++ b/package.json
@@ -16,17 +16,24 @@
     "@fluentui/font-icons-mdl2": "^8.1.20",
     "@fluentui/react": "^8.112.7",
     "@fluentui/react-icons": "^2.0.222",
-    "@types/node": "^10.12.18",
-    "@types/powerapps-component-framework": "^1.2.0",
-    "@types/react": "^16.9.43",
-    "@types/react-dom": "^16.9.8",
     "office-ui-fabric-react": "^7.204.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "eslint": "^8.57.0",
+    "typescript": "^4.9.5",
+    "@types/react": "^16.9.43",
+    "@types/react-dom": "^16.9.8",
+    "@types/node": "^18.19.31",
+    "@microsoft/eslint-plugin-power-apps": "^0.2.33",
+    "@types/powerapps-component-framework": "^1.3.11",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.1.1",
     "pcf-scripts": "^1",
-    "pcf-start": "^1",
-    "typescript": "^4.9.5"
+    "pcf-start": "^1"
   }
 }
