--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,9 @@
       "es2021": true
     },
     "extends": [
-      "eslint:recommended"
+      "eslint:recommended",
+      "plugin:@typescript-eslint/recommended",
+      "plugin:react/recommended"
     ],
     "globals": {
       "ComponentFramework": true
@@ -19,6 +21,11 @@
       "@typescript-eslint"
     ],
     "rules": {
-      "no-unused-vars": "off"
+      "@typescript-eslint/no-unused-vars": "off"
+    },
+    "settings": {
+      "react": {
+        "version": "detect"
+      }
     }
 }
