--- a/package.json
+++ b/package.json
@@ -13,27 +13,27 @@
     "refreshTypes": "pcf-scripts refreshTypes"
   },
   "dependencies": {
-    "@fluentui/font-icons-mdl2": "^8.1.20",
-    "@fluentui/react": "^8.112.7",
-    "@fluentui/react-icons": "^2.0.222",
-    "office-ui-fabric-react": "^7.204.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "@fluentui/react": "^8.29.0",
+    "@fluentui/font-icons-mdl2": "^8.1.20"
   },
   "devDependencies": {
-    "eslint": "^8.57.0",
-    "typescript": "^4.9.5",
-    "@types/react": "^16.9.43",
-    "@types/react-dom": "^16.9.8",
-    "@types/node": "^18.19.31",
     "@microsoft/eslint-plugin-power-apps": "^0.2.33",
     "@types/powerapps-component-framework": "^1.3.11",
+    "@types/node": "^18.19.31",
+    "@types/react": "^16.14.60",
+    "@types/react-dom": "^16.9.24",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "@typescript-eslint/parser": "^7.7.1",
+    "eslint": "^8.57.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.34.1",
     "pcf-scripts": "^1",
-    "pcf-start": "^1"
+    "pcf-start": "^1",
+    "react": "^16.14.0",
+    "typescript": "^4.9.5"
   }
 }
